# prd-pal

./: .dockerignore  .env.example  .gitignore  Dockerfile  NOTICE  PROJECT_ANALYSIS.md  README.en.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py  start-backend-dev.cmd  start-dev.cmd  start-dev.ps1  start-frontend-dev.cmd
data/: risk_catalog.json
docs/: agent-integration-plan.md  approval-loop-design-gap-analysis-and-phased-prompts.md  approval-loop-design-phased-prompts.md  architecture-and-v1-plan.md  codex-prompts-phased-development.md  deployment-guide.md  eval-validation.md  feishu-demo-assets.md  feishu-main-entry-mvp.md  feishu-main-entry-plugin-plan.md  feishu-setup.md  feishu-user-guide.md  frontend-optimization-prompts.md  frontend_optimization_plan.md  handoff-plan.md  interview-flashcards.md  interview-prep-v2.1.md  interview-prep-v3.md  interview-prep.md  mcp.md  quick-start.md  release-notes-v2.md  release-notes-v4.md  release-notes-v5.md  release-notes-v6.md  release-v3.1.0.md  resume_project_description_ai_backend.md  resume_project_description_ai_backend_future.md  review-engine-positioning.md  review-engine-release-checklist.md  review-engine-release-prompts.md  sample_prd.md  skills-plan.md  v1-test-report.md  v2-api.md  v3-roadmap.md  v4-mainline-feasibility-assessment.md  v4-roadmap.md  v7-optimization-and-extension-prompts.md
eval/: compare_review_modes.py  parallel-review_compare.py  parallel_review_compare.py  review_mode_comparison.json  run_eval.py  smoke_report.json  smoke_review_engine.py
(+490 files in other folders)
